PrisonersDilemma/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prisoners-dilemma-api
  labels:
    app: prisoners-dilemma-api
    version: v1
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: prisoners-dilemma-api
  template:
    metadata:
      labels:
        app: prisoners-dilemma-api
        version: v1
    spec:
      containers:
      - name: prisoners-dilemma-api
        image: mnovikovmindbox/prisoners-dilemma-api:1.3
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /api/games
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /api/games
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
          failureThreshold: 3
