PrisonersDilemma/k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prisoners-dilemma-service
  labels:
    app: prisoners-dilemma-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: prisoners-dilemma-api
